[package]
name = "tuyau"
description = """
tuyau
"""
version = "0.0.0"

license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "tuyau"
path = "main.rs"

[dependencies]
ruma = { git = "https://github.com/ruma/ruma.git", features = [
    "client-api",
    "federation-api",
], default-features = false }
