[package]
name = "tuyau"
description = """
tuyau
"""
version = "0.0.0"

license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "tuyau"
path = "main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

serde_json = "1"
ruma = { git = "https://github.com/ruma/ruma.git", features = [
    "client-api",
    "federation-api",
    "unstable-pdu",
], default-features = false }
axum = "0.7"

async-trait = "0.1"
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "macros",
], default-features = false }
anyhow = "1"
